managed the appassembler-maven-plugin shared settings
git-svn-id: https://svn.apache.org/repos/asf/incubator/any23/trunk@1231709 13f79535-47bb-0310-9956-ffa450edef68